--- a/popup.css
+++ b/popup.css
@@ -1,6 +1,6 @@
 
 body{
-    background: #2F7949;
+    background: #56B29A;
     height: 300px;
     width: 210px;
     padding-top: 10px;
@@ -74,6 +74,15 @@ img{
 }
 
 #reportBug{
+    margin-top: 10px;
+    background-color: white;
+    width: 80%;
+    padding: 10px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 30px;
+}
+
+#meditationMode{
     margin-top: 10px;
     background-color: white;
     width: 80%;
